# am

./: .gitignore  .taplo.toml  Cargo.toml  README.md  REUSE.toml  build.sh  default.nix  flake.nix  garnix.yaml  package.nix
.github/workflows/: build.yml  check.yml  clippy.yml  nix.yml  release.yml
src/: format.rs  http.rs  ipc.rs  main.rs
src/cmd/: discord.rs  mod.rs  now.rs
src/cmd/discord/: agent.rs  mod.rs
src/music/: metadata.rs  mod.rs  models.rs
src/rich_presence/: activity.rs  errors.rs  ipc_impl.rs  ipc_trait.rs  ipc_unix.rs  ipc_windows.rs  mod.rs  pack_unpack.rs
