# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "am"
version = "0.6.3"
edition = "2024"

description = "A beautiful and feature-packed Apple Music CLI"
categories = ["command-line-utilities"]
keywords = ["apple", "macos", "music", "apple-music"]
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ryanccn/am"
repository = "https://github.com/ryanccn/am.git"

[dependencies]
anstream = "0.6.21"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
eyre = "0.6.12"
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
owo-colors = "4.3.0"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "json", "deflate", "gzip", "brotli", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
too_many_lines = "allow"

[lints.rust]
unsafe_code = "forbid"
